# uniclone

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  custom_configs.md  index.md  mkdocs.yml  quickstart.md  router.md
scripts/: _corpus_io.py  evaluate_router.py  generate_corpus.py  run_pipeline.py  train_online.py  train_router.py
tests/: conftest.py  test_backend.py  test_config.py  test_em.py  test_em_mfvi_parity.py  test_emission.py  test_evaluate.py  test_generative_model.py  test_hybrid.py  test_k_prior.py  test_mcmc.py  test_meta_features.py  test_mfvi.py  test_neural_ts.py  test_noise.py  test_online_training.py  test_parity.py  test_phylo.py  test_quantum_cat.py  test_router.py  test_training.py  test_viz.py
uniclone/: __init__.py  uniclone.py
uniclone/core/: backend.py  config.py  model.py  router.py  types.py
uniclone/emission/: __init__.py  bb_pareto.py  beta_binomial.py  binomial.py  dcf.py
uniclone/inference/: __init__.py  _utils.py  em.py  hybrid.py  mcmc.py  mfvi.py
uniclone/k_prior/: __init__.py  bic.py  dirichlet.py  fixed.py  tssb.py
uniclone/noise/: __init__.py  _utils.py  artefact.py  multiplicity.py  none.py  tail_filter.py
uniclone/phylo/: __init__.py  constrained.py  joint_mcmc.py  longitudinal.py  none.py  pairwise.py  post_hoc.py  tree_utils.py
uniclone/router/: __init__.py  constants.py  evaluate.py  explain.py  meta_features.py  neural_ts.py  router.py  training.py
uniclone/simulate/: __init__.py  bamsurgeon_wrap.py  quantum_cat.py
uniclone/viz/: __init__.py  _style.py  cellularity.py  dashboard.py  diagnostics.py  evolution.py  phylo_tree.py
