[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniclone"
version = "0.1.0"
description = "Unified probabilistic framework for tumour clonal reconstruction"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "tqdm>=4.60",
]

[project.urls]
Homepage = "https://github.com/uniclone/uniclone"
Documentation = "https://uniclone.readthedocs.io"
Repository = "https://github.com/uniclone/uniclone"

[project.optional-dependencies]
gpu = ["torch>=2.1"]
mcmc = ["pymc>=5.10"]
router = ["torch>=2.1"]
bamsurgeon = ["pysam>=0.22"]
viz = ["plotly>=5.18"]
dashboard = ["plotly>=5.18", "dash>=2.14"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "mypy>=1.8",
    "ruff>=0.3",
    "plotly>=5.18",
]
all = [
    "torch>=2.1",
    "pymc>=5.10",
    "plotly>=5.18",
    "dash>=2.14",
    "pysam>=0.22",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["type-arg", "no-any-return", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["union-attr", "arg-type", "attr-defined", "no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
